--- a/djluchainz/src/styles/globals.css
+++ b/djluchainz/src/styles/globals.css
@@ -2,4 +2,4 @@
 @tailwind components;
 @tailwind utilities;
 
-@import url('https://fonts.googleapis.com/css2?family=Abel&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Dosis:wght@400;500&display=swap');
