--- a/djluchainz/src/styles/globals.css
+++ b/djluchainz/src/styles/globals.css
@@ -3,3 +3,5 @@
 @tailwind utilities;
 
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;800;900&display=swap');
+
+@import url('https://fonts.googleapis.com/css2?family=Inria+Serif:ital,wght@0,300;0,400;0,700;1,300;1,400&display=swap');
